2021-08-19    <alexander.nelson@nist.gov>

	* Python: Add dfxml_diff to exported tools
	* Python: Name change - make_differential_dfxml.py is now dfxml_diff

2021-08-16    <j4n6ru@gmail.com>

	* Python: Move tools back to package installation directory tree
	* Python: Name change - walk_to_dfxml.py is now dfxml_cwd

2021-07-23    <alexander.nelson@nist.gov>

	* Python: Use setup.cfg to define installable package and command-line tools practice

2021-07-02

	* DFXML: Separate C++ and Python code bases on Github.

2020-01-03    <alexander.nelson@nist.gov>

	* Schema: Update schema pointer to 'develop'

2020-01-02    <alexander.nelson@nist.gov>

	* objects.py tests: Test partition object properties
	* objects.py: Add PartitionObject.partition_index property
	* objects.py tests: Test empty object serialization

2019-12-18    <alexander.nelson@nist.gov>

	* objects.py tests: Test storage layers with presence permutations
	* objects.py: Shore up storage layer transitions

2019-12-10    <alexander.nelson@nist.gov>

	* objects.py tests: Test error property on disk image object
	* objects.py: Add error property to disk image object
	* Schema: Track schema branch add_disk_image_error
	* objects.py tests: Reduce set of tests run by Makefile and pytest

2019-12-09    <alexander.nelson@nist.gov>

	* objects.py tests: Test adding partition object as child of partition object
	* objects.py: Add partition object as child of partition object
	* Schema: Track DFXML Schema branch add_partition_child_of_partition
	* objects.py tests: Add I/O round-trip to storage layers tests
	* objects.py: Implement "poststream" de-serialization of remaining storage layers
	* objects.py: Add parser transition for partition system containing file
	* objects.py: Add parser transition for partition system without containing disk image
	* objects.py: Whitespace-pad parser enums
	* objects.py: Confirm DiskImageObject can have FileObject 
	* objects.py tests: Confirm PartitionObject can have FileObject 