@@ -28,19 +28,8 @@ cd dfxml_python
 pip3 install .
 ```
 
-### Installed utilities
-Some tools are provided as command-line programs when the `dfxml` module is installed. Their names follow the convention to start with the prefix `dfxml_`:
-
-| Program name    | Corresponding file                | Short description                                        	    	       	     |
-|-----------------+-----------------------------------+--------------------------------------------------------------------------------------|
-| dfxml_cwd       | `dfxml/walk_to_dfxml/__init__.py` | Fully walk the current working directory and record all files encountered.           |
-| dfxml_info      | `dfxml/bin/dfxinfo.py`	      | Print a summary of a DFXML file - summary of all files, duplicate files, file types. |
-| dfxml_idiff     | `dfxml/bin/idifference2.py`       | Generates a report about what's different between two disk images.                   |
-| dfxml_ireport   | `dfxml/bin/ireport.py`	      | Generates stats from a DFXML file(s).                                                |
-| dfxml_iverify   | `dfxml/bin/iverify.py`	      | Reads an XML file and image and verifies that the files are present.                 |
-| dfxml_rdiff	  | `dfxml/bin/rdifference.py`	      | Finds and reports differences in two Windows registry hive-files.                    |
-
-For an initial overview about the provided tools, which were not installed, have a look at `bin/README.md`
+#### Installed utilities
+Some tools are provided in this repository, under [`dfxml/bin/`](dfxml/bin/).  That directory provides an overview of the tools, as well as links to documentation for command-line programs added to `$PATH` when the `dfxml` module is installed.
 
 ### Using this as a git submodule
 This DFXML module can be used as a submodule inside another git module.
