@@ -10,12 +10,8 @@ classifiers =
 packages = find:
 python_requires = >=3.6
 
+# See CONTRIBUTE.md before adding a console script line.
 [options.entry_points]
 console_scripts =
-    dfxml_cwd = dfxml.walk_to_dfxml:main
-    dfxml_diff = dfxml.make_differential_dfxml:main
-    dfxml_idiff = dfxml.bin.idifference2:main
-    dfxml_info = dfxml.bin.dfxinfo:main
-    dfxml_ireport = dfxml.bin.ireport:main
-    dfxml_iverify = dfxml.bin.iverify:main
-    dfxml_rdiff = dfxml.bin.rdifference:main
+    make_differential_dfxml = dfxml.bin.make_differential_dfxml:main
+    walk_to_dfxml = dfxml.bin.walk_to_dfxml:main
